--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h2>online business</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
                 <div class="b_image">
-                    <img src="images/Quick.png" alt="Quick">
+                    <img src="images/quick.png" alt="Quick">
                 </div>
             </div>
         </div>
